infra/kubernetes/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: ticketing-service-account
      containers:
        - name: worker
          image: ticketing-worker:local
          imagePullPolicy: IfNotPresent
          command: ["npm"]
          args: ["start"]
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
